@@ -1,3 +1,7 @@
+2010-06-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix out-of-source build.  Patch by Jörg Faschingbauer
+
 2010-05-10  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Remove "chmod root" from install of fusermount.  Reported by
